Change id of back to top button to "btn"

--- a/template/template_main.html
+++ b/template/template_main.html
@@ -58,7 +58,7 @@
   </div>
 </div> 
 
-<a id="backtotop" href="#topofthepage">&#8679;</a>
+<a id="btn" href="#topofthepage">&#8679;</a>
 
 
 {% endblock %}
