--- a/template/template_main.html
+++ b/template/template_main.html
@@ -13,18 +13,24 @@
 -->
 
 
-
+<!-- 
 <nav class="navbar navbar-default titolo">
-   <div class="container-fluid justify-content-center">
-        <h1>TIMETABLE</h1>
-   </div>
-</nav>
+
+</nav> -->
 
 
-<div class="TTable container-fluid justify-content-center">
-  <div class="row container-fluid">
+
+
+<div class="full-container justify-content-center container-fluid">
+<div class="row">
+<div class="col-3"></div>
+<div class="full-container container-fluid justify-content-center col-9">
+<!--   <div class="container-fluid justify-content-center">
+    <h1>TIMETABLE</h1>
+  </div> -->
+  <div class="row container-fluid no-padding">
     {% for day in schedule %}
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-lg-4 set-separator">
           <div class="row">
           {% for lab,slot in day.iterrows() %}
             <div class="col-lg-12 {{ slot.defsize }} {{ slot.kind }} d-flex align-items-center justify-content-center">
@@ -56,7 +62,9 @@
       </div>
     {% endfor %}
   </div>
-</div> 
+</div>
+</div>
+</div>
 
 <a id="backtotop" href="#topofthepage">&#8679;</a>
 
