--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -57,10 +57,9 @@ header {
 }
 
 
-/*----------- BACK TO TOP BUTTON -----------*/
 
 
-#backtotop {
+#btn {
   background: white;
   font-size: 1em;
   color: black;
@@ -69,7 +68,20 @@ header {
   padding-right: 4px;
   border: solid black 1px;
   margin: 5vh;
+  border-radius: 5px;
 
+}
+#btn:hover {
+  background: #404040;
+  font-size: 1em;
+  color: white;
+  float: right;
+  padding-left: 4px;
+  padding-right: 4px;
+  border: solid black 1px;
+  margin: 5vh;
+	transition: 0.3s;
+border-radius: 5px;
 }
 
 /*----------- A TAG -----------*/
@@ -88,6 +100,7 @@ a:visited {
 a:hover {
   color: black;
   text-decoration: none;
+  background-color: dimgrey;
 }
 
 /* selected link */
@@ -171,7 +184,7 @@ a:active {
 }
 
 .coffee {
-  font-size: 1.2em;
+  font-size: 0.8em;
   background:#f1d4c8;
 }
 
