Few details missing for calendar

--- a/template/template_main.html
+++ b/template/template_main.html
@@ -8,11 +8,20 @@
 
 <div class="full-container justify-content-center container-fluid">
 <div class="row">
-<div class="col-3"></div>
+<div class="col-3">
+  <div class="organizational-info">
+      The conference will take place in {{org.location[0]}}.
+  </div>
+  <div class="row container-fluid full-container justify-content-center">
+    <div class="col-12 container-btn">
+      <a id="download_cal" class="btn" href="/downloads/cal.ics">Download calendar</a>
+    </div>
+    <div class="col-12">
+      <a id="contact_organizers" class="btn" href="mailto:{{org.email[0]}}">Contact organizers</a>
+    </div>
+  </div>     
+</div>
 <div class="full-container container-fluid justify-content-center col-9">
-<!--   <div class="container-fluid justify-content-center">
-    <h1>TIMETABLE</h1>
-  </div> -->
   <div class="row container-fluid no-padding">
     {% for day in schedule %}
       <div class="col-12 col-lg-4 set-separator">
@@ -51,7 +60,7 @@
 </div>
 </div>
 
-<a id="btn" href="#topofthepage">&#8679;</a>
+<a id="backtotop" class="btn" href="#topofthepage">&#8679;</a>
 
 
 {% endblock %}
